--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# APP
 spring.application.name=SalonFlow backend
+
+#DATABASE
+spring.datasource.url=jdbc://postgresql://localhost:5432/salonflow
+spring.datasource.username=salonflow
+spring.datasource.password=salonflow
+
+#FLYWAY
+spring.flyway.baseline-on-migrate=true
+
+#JPA / HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#SERVER
+server.port=8080
