--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,19 +2,21 @@
 spring.application.name=SalonFlow backend
 
 #DATABASE
-spring.datasource.url=jdbc://postgresql://localhost:5432/salonflow
-spring.datasource.username=salonflow
-spring.datasource.password=salonflow
+#spring.datasource.url=jdbc:postgresql://localhost:5432/salonflow
+#spring.datasource.username=salonflow
+#spring.datasource.password=salonflow
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+##FLYWAY
+#spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
 
-#FLYWAY
-spring.flyway.baseline-on-migrate=true
-
-#JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+##JPA / HIBERNATE
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#
 #SERVER
 server.port=8080
