--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.application.name=SalonFlow backend
 #spring.datasource.password=salonflow
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
 ##FLYWAY
 #spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=false
