fix: lowercase salonFlow to salonflow

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=SalonFlow backend
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/salonFlow
-spring.datasource.username=salonFlow
-spring.datasource.password=salonFlow
+spring.datasource.url=jdbc:postgresql://localhost:5432/salonflow
+spring.datasource.username=salonflow
+spring.datasource.password=salonflow
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # FLYWAY
