--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,21 +1,13 @@
-# APP
-spring.application.name=SalonFlow backend
+spring.application.name=salonflow-backend
 
-# DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/salonflow
 spring.datasource.username=salonflow
 spring.datasource.password=salonflow
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-# FLYWAY
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
-# JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# SERVER
 server.port=8080
