--- a/frontend/salonflow-frontend/angular.json
+++ b/frontend/salonflow-frontend/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "18298221-d37a-443b-ac1e-23203fac61db"
   },
   "newProjectRoot": "projects",
   "projects": {
