--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,13 +2,13 @@ HELP.md
 
 build/
 
-# Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+## Maven
+#target/
+#pom.xml.tag
+#pom.xml.releaseBackup
+#pom.xml.versionsBackup
+#pom.xml.next
+#release.properties
 
 
 ### STS ###
